2008-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/common.py:
	* flumotion/admin/command/component.py:
	* flumotion/admin/command/manager.py:
	* flumotion/monitor/nagios/log.py:
	* flumotion/ui/fileselector.py:
	  pychecker cleanups.

2008-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_config.py:
	  Move config to the left so it doesn't exceed 80 chars after
	  renaming.  Maybe we should do this for all of them.

2008-08-26  Murray Cumming  <murrayc@murrayc.com>

	* flumotion/admin/gtk/httpstreamersteps.py:
	* flumotion/admin/gtk/shout2steps.py: Added docSection IDs for 
	these assistant pages.

2008-08-26  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	Add left,right & bottom padding to the message view.

2008-08-25  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
	  Translated fuzzy new messages to Spanish.

2008-08-25  Johan Dahlin  <johan@flumotion>

	* data/glade/http-wizard.glade:
	* flumotion/admin/gtk/consumptionsteps.py:
	* flumotion/admin/gtk/httpstreamersteps.py:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	* flumotion/worker/checks/http.py:
	Make it possible to override the public hostname.
	Fixes #928.

2008-08-25  Johan Dahlin  <johan@flumotion>

	* common/common.mk (check-local-pep8): Add --repeat here, so we
	can see more than just the first error.

2008-08-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/config.py:
	  Add some newlines to serialization around flows/atmosphere and
	  components so the structure of the XML is visually clear again.

2008-08-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/videotest/videotest.xml:
	  Update descriptions to talk about example and demonstration.
	  See #1090.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
